--- a/app/src/main/res/layout/currency_item_view.xml
+++ b/app/src/main/res/layout/currency_item_view.xml
@@ -8,6 +8,7 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content">
 
+
     <TextView android:id="@+id/currencyTextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -16,12 +17,15 @@
               style="@style/TextAppearance.AppCompat.Display2"
               android:layout_marginStart="16dp"
               app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"/>
+              app:layout_constraintTop_toTopOf="parent"
+              android:layout_marginEnd="8dp"/>
 
 
     <EditText android:id="@+id/currencyValueEditText"
-              android:layout_width="wrap_content"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
               android:hint="@string/currency_default_value"
+              android:gravity="end"
               android:text="@string/currency_default_value"
               android:maxLines="1"
               android:inputType="numberDecimal"
@@ -29,6 +33,6 @@
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
-              android:layout_height="wrap_content" app:layout_constraintStart_toEndOf="@+id/currencyTextView"
-              android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+              android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/currencyTextView"
+              android:layout_marginStart="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
